The footer and mobile menu were having overflow issues, these have been fixed.

--- a/styles.css
+++ b/styles.css
@@ -668,13 +668,13 @@ animation: scroll-in linear .3s 1;
 /*BELOW 100px*/
 @media only screen and (max-width: 1104px){
   .cart-x{
-    top: 50px;
-    right: 12%
+    top: 25px;
+    right: 10%
   }
   .mega-menu-mobile{
     display: none;
     justify-content: flex-start;
-    padding: 40px 0;
+    padding: 20px 0;
     flex-direction: column;
     height: 100%;
     min-height: 100%;
@@ -684,8 +684,8 @@ animation: scroll-in linear .3s 1;
   }
   .menu-copy{
     width: 75%;
-    min-height: 20vh;
-    max-height: 20vh;
+    min-height: 15vh;
+    max-height: 15vh;
   }
   .footer-half2 .menu-copy {
   width: 75%;
@@ -768,17 +768,20 @@ animation: scroll-in linear .3s 1;
 footer{
   margin-top: 80px;
   padding: 20px 40px;
-  height: 100%;
+  height: 650px;
   flex-direction: column;
+  justify-content: flex-start;
 }
 .footer-half1{
   width: 100%;
+  height: 30%;
 }
 .email-box{
   width: 100%;
 }
 .footer-half2 {
   width: 100%;
+  height: 50%;
   margin-top: 20px;
 }
 .menu-copy{
